<resources>
    <string name="app_name">GrocerizerSQL</string>
    <string name="action_settings">Settings</string>
    <string name="add_keyword">Add a Keyword...</string>
    <string name="button_add">Enter</string>
    <string name="button_clear">Clear</string>
    <string name="button_print">Print</string>
    <string name="button_fetch">Fetch</string>
    <string name="list_text">Temporary list text</string>
</resources>
